--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     display: flex;
 }
 
+.text-primary {
+    color: #FF900E;
+}
+
 /* dark-02 */
 .text-gray {
     color: #424242;
@@ -29,6 +33,10 @@
     background-color: rgba(255, 144, 14, 0.1);
 }
 
+.black {
+    color: black;
+}
+
 .btn-primary {
     background-color: #FF900E;
     color: white;
@@ -37,6 +45,15 @@
     font-weight: 600;
     border-radius: 8px;
     border: none;
+}
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main>section {
+    margin-top: 130px;
 }
 
 /* header styles */
@@ -84,6 +101,31 @@
 
 .banner-img {
     width: 100%;
+}
+
+/* team & feature releted styles */
+.teams {
+    align-items: center;
+}
+
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features {
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+#quick-list {
+    font-weight: 500px;
 }
 
 /* responsive media-quary banner section */
