--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     display: flex;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
 .text-primary {
     color: #FF900E;
 }
@@ -119,10 +124,44 @@ main>section {
     max-width: 530px;
 }
 
-.feature-title {
-    font-size: 2.8rem;
-    font-weight: 700;
+/* some fact-releted styles */
+.section-title {
+    margin-bottom: 20px;
 }
+
+.fact-description {
+    max-width: 540px;
+    margin-bottom: 30px;
+}
+
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card {
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name {
+    font-size: 1.25rem;
+    font-weight: 600px;
+    margin-top: 10px;
+}
+
 
 #quick-list {
     font-weight: 500px;
@@ -133,7 +172,30 @@ main>section {
 @media screen and (max-width:576px) {
 
     .nav-bar,
-    .nav-links {
+    .nav-links,
+    .teams {
         flex-direction: column;
+    }
+
+    .team-img-container {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        margin-left: 30px;
+    }
+
+    .our-features {
+        margin-left: 20px;
+        /* padding: 0px 30px; */
+    }
+}
+
+/* medium size device */
+@media screen and(min-width:576px) and (max-width:992px) {
+    .teams {
+        flex-direction: column;
+    }
+
+    .our-features {
+        margin-left: 50px auto;
     }
 }
